--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
     
@@ -23,7 +24,7 @@
     <main>
         
     <article>
-        <h2>HTML Tags</h2> 
+        <h2>░ HTML Tags</h2> 
         <dl>
            <dt>abbr</dt>
            <dd>An acronym or abbreviation, like “HTML”, “CSS”, etc. title attribute contains the expanded version, like <abbr title="Hypertext Markup Language">"HTML"</abbr>, <abbr title="Cascading Style Sheets">"CSS"</abbr></dd>
