fixes img src order

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -26,7 +26,7 @@
         <h2>░ About Me </h2>
         
         <div>
-            <img id="my-image" img src="images/my-photo.jpg" alt="girl in an antique shop" width="400" height="600">
+            <img src="images/my-photo.jpg" id="my-image" alt="girl in an antique shop" width="400" height="600">
         </div>
 
         <p>Hello everyone, my name is Mary Christine Sacay. My nickname is <abbr title="Mary Christine">MC</abbr>. I was born on the 18<sup>th</sup> of September 1996. I am a 26-year-old passionate individual who finds joy in various creative pursuits. Cooking, singing, and writing music are my outlets for self-expression, allowing me to channel my emotions and share my thoughts with others. I am constantly experimenting in the kitchen, trying new recipes and flavors to create delicious and wholesome meals. When I'm not in the kitchen, you'll often find me belting out tunes or composing my own songs, as music is a language that speaks to my soul. Another aspect of my adventurous spirit is my love for biking. Exploring new places on my bike brings me a sense of freedom and allows me to appreciate the beauty of the world around me. Oh, and did I mention I'm a proud cat person? Their independent yet affectionate nature <em>resonates with me</em>.</p>
