--- a/final-project/index.html
+++ b/final-project/index.html
@@ -4,18 +4,107 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Project | Sacay</title>
+    <!-- <link rel="stylesheet" href="css/main.css"> -->
 </head>
 <body>
     <header>
-
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#about-us">About Us</a>
+            <a href="#services">Services</a>
+            <a href="#team">Team</a>
+            <a href="#contact">Contact</a>
+            <div class="search-container">
+                <!-- Navigation bar with a search box and a magnifying button inside of it. -->
+                <input type="text" placeholder="Search">
+                <button type="submit"></button>
+            </div>
+          </div>
     </header>
 
     <main>
+        <section id="welcome">
+            <div class="welcome-image">
+                <!-- Target in CSS for hero image -->
+                <div class="welcome-text">
+                    <h1>Welcome to Three Star Media</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <button type="button">Connect with us</button>
+                </div>
+            </div>
+        </section>
+
+        <section id="about-us">
+            <div class="about-us">
+                <h2>About Us</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis imperdiet proin fermentum leo vel orci porta.</p>
+                <p>Sapien pellentesque habitant morbi tristique. Ullamcorper a lacus vestibulum sed arcu. Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis natoque.</p>
+            </div>
+        </section>
+
+        <section id="our-services">
+            <!-- <div class="our-services hero-img">
+                <img src="images/digital.jpg" alt="Using a laptop and smartphone">
+            </div> -->
+
+            <div class="our-services">
+                <h2>Our Services</h2>
+            </div>
+
+            <div class="services-grid">
+                <div class="digital-transformation">
+                    <img src="images/digital.jpg" alt="Using a laptop and smartphone">
+                    <article>
+                        <h3>Digital Transformation</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis imperdiet proin fermentum leo vel orci porta.</p>
+                        <a class="btn" href="#">Digital Plans</a>
+                    </article>
+                </div>
+
+                <div class="marketing">
+                    <img src="images/marketing.jpg" alt="Laptop showing data analytics">
+                    <article>
+                        <h3>Marketing</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis imperdiet proin fermentum leo vel orci porta.</p>
+                        <a class="btn" href="#">Marketing Plans</a>
+                    </article>
+                </div>
+
+                <div class="video-production">
+                    <img src="images/video.jpg" alt="Smartphone showing YouTube">
+                    <article>
+                        <h3>Video Production</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis imperdiet proin fermentum leo vel orci porta.</p>
+                        <a class="btn" href="#">Video Plans</a>
+                    </article>
+                </div>
+
+                <div class="web-dev">
+                    <img src="images/web.jpg" alt="Smartphone showing Instagram">
+                    <article>
+                        <h3>Web Development</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis imperdiet proin fermentum leo vel orci porta.</p>
+                        <a class="btn" href="#">Web Plans</a>
+                    </article>
+                </div>
+
+                <div class="print">
+                    <img src="images/print.jpg" alt="Newspaper stands">
+                    <article>
+                        <h3>Print</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis imperdiet proin fermentum leo vel orci porta.</p>
+                        <a class="btn" href="#">Print Plans</a>
+                    </article>
+                </div>
+            </div>
+        </section>
 
     </main>
 
     <footer>
-        
+        <small>&copy; Copyright Three Star Media, 2020</small>
+        <small>All images are taken from <a href="https://unsplash.com/">Unsplash</a></small>
+
     </footer>
     
 </body>
