--- a/final-project/index.html
+++ b/final-project/index.html
@@ -190,7 +190,7 @@
 
             <div id="map-frame" class="contact-us-grid">
                     <h3>Location</h3>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d179236.6387268623!2d-75.7492796457417!3d45.41795998603937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d45.4770319!2d-75.4487161!4m5!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus%2C%201385%20Woodroffe%20Ave%2C%20Nepean%2C%20ON%20K2G%201V8!3m2!1d45.3499335!2d-75.7549257!5e0!3m2!1sen!2sca!4v1690733073936!5m2!1sen!2sca" width="100" height="100" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9442698328744!2d-75.75750598775213!3d45.34993724093405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1691076524286!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
 
