adds the search and arrow right icons in buttons

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -6,7 +6,7 @@
     <title>Final Project | MC Sacay</title>
     <link rel="stylesheet" href="css/main.css">
     <!-- Load icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
 
 </head>
 <body>
@@ -27,7 +27,7 @@
             <div class="search-container">
                 <!-- Style the submit button in CSS -->
                     <input type="text" placeholder="Search">
-                    <button type="submit"><i class="fa fa-search"></i></button>
+                    <button type="submit"><span class="material-symbols-outlined">search</span></button>
             </div>
         </div>
     </header>
@@ -40,7 +40,7 @@
             <!-- div class used to limit max width -->
                     <h1>Welcome to Three Star Media</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                    <button type="button">Connect with us</button>
+                    <button type="button" class="button-style-1">Connect with us<span class="material-symbols-outlined">arrow_right</span></button>
             </div>
         </section>
 
@@ -64,7 +64,7 @@
                     <article>
                         <h3>Digital Transformation</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis imperdiet proin fermentum leo vel orci porta.</p>
-                        <button type="button">Digital Plans</button>    
+                        <button type="button" class="button-style-2">Digital Plans<span class="material-symbols-outlined">arrow_right</span></button>    
                     </article>
                 </div>
 
@@ -73,7 +73,7 @@
                     <article>
                         <h3>Marketing</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis imperdiet proin fermentum leo vel orci porta.</p>
-                        <button type="button">Marketing Plans</button>
+                        <button type="button" class="button-style-2">Marketing Plans<span class="material-symbols-outlined">arrow_right</span></button>
                     </article>
                 </div>
 
@@ -82,7 +82,7 @@
                     <article>
                         <h3>Video Production</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis imperdiet proin fermentum leo vel orci porta.</p>
-                        <button type="button">Video Plans</button>
+                        <button type="button" class="button-style-2">Video Plans<span class="material-symbols-outlined">arrow_right</span></button>
                     </article>
                 </div>
 
@@ -91,7 +91,7 @@
                     <article>
                         <h3>Web Development</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis imperdiet proin fermentum leo vel orci porta.</p>
-                        <button type="button">Web Plans</button>
+                        <button type="button" class="button-style-2">Web Plans<span class="material-symbols-outlined">arrow_right</span></button>
                     </article>
                 </div>
 
@@ -100,7 +100,7 @@
                     <article>
                         <h3>Print</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis imperdiet proin fermentum leo vel orci porta.</p>
-                        <button type="button">Print Plans</button>
+                        <button type="button" class="button-style-2">Print Plans<span class="material-symbols-outlined">arrow_right</span></button>
                     </article>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                 <div class="container">
                     <h3>Our Vision</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque nemo odit modi, quod quas ducimus? Soluta, eaque exercitationem, optio quibusdam omnis reiciendis nulla nemo ullam saepe fugit, veniam illo nisi.</p>
-                    <button type="button">Learn More</button>
+                    <button type="button" class="button-style-3">Learn More<span class="material-symbols-outlined">arrow_right</span></button>
                 </div>
             </div>
         </section>
@@ -164,7 +164,7 @@
                         <label for="message">Message</label>
                         <textarea id="message" name="message"></textarea>
                     </div>
-                    <button type="submit">Send</button>
+                    <button type="submit" class="button-style-4">Send</button>
                 </form>
             </div>
 
